# BeautifulFileSystem

./: CMakeLists.txt  ItemsOriginal.qml  Page_Setting.qml  README.md  Resource.qrc  main.cpp  testqml.qml
Csrc/: My_Tree_Model.cpp  My_Tree_Model.h  filetypeassociationmanager.cpp  filetypeassociationmanager.h
FIle_Tree_View_mirror/: ControlButtons.qml  Js_Function.js
FluentUI/: FluTreeModel.cpp  FluTreeModel.h
FluentUI/Qt5/imports/FluentUI/Controls/: FluControl.qml  FluTreeView.qml
FluentUI/Qt6/imports/FluentUI/Controls/: FluNavigationView.qml  FluTreeView.qml
Test__ALL/: Test.qml  TestICON.qml
